--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,15 @@
             android:parentActivityName="uk.co.fuuzets.wetting.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="uk.co.fuuzetsu.wetting.MainActivity" />
+                android:value="uk.co.fuuzetsu.wetting.DisplayMessageActivity" />
+        </activity>
+        <activity
+            android:name="uk.co.fuuzetsu.wetting.AddActivity"
+            android:label="@string/title_activity_display_message"
+            android:parentActivityName="uk.co.fuuzets.wetting.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="uk.co.fuuzetsu.wetting.AddActivity" />
         </activity>
     </application>
 </manifest>
